# gr4-incubator

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json.example  devcontainer.json.example-mac
.github/workflows/: ci.yml
algorithm/: CMakeLists.txt
blocks/: CMakeLists.txt  meson.build
blocks/analog/: CMakeLists.txt
blocks/analog/test/: CMakeLists.txt
blocks/audio/: CMakeLists.txt
blocks/audio/examples/: CMakeLists.txt
blocks/audio/test/: CMakeLists.txt
blocks/basic/: CMakeLists.txt
blocks/basic/test/: CMakeLists.txt
blocks/packet-modem/: meson.build
blocks/packet-modem/apps/: README.md  meson.build  packet_receiver_file.cpp  packet_receiver_soapy.cpp  packet_transceiver.cpp  packet_transmitter_pdu.cpp  packet_transmitter_pdu_throttle.cpp  packet_transmitter_sdr.cpp
blocks/packet-modem/benchmarks/: README.md  benchmark_packet_receiver.cpp  benchmark_packet_transceiver.cpp  benchmark_packet_transmitter.cpp  benchmark_packet_transmitter_pdu.cpp  benchmark_syncword_detection.cpp  meson.build  results.md
blocks/packet-modem/docs/: docker.md  netns.md
blocks/packet-modem/examples/: crc.cpp  crc_append_missing_tags.cpp  crc_check.cpp  done_msg_sink.cpp  head.cpp  header_formatter.cpp  meson.build  messages.cpp  minimal_flowgraph.cpp  multithreaded_test.cpp  multithreaded_test2.cpp  pack_bits.cpp  packet_ingress.cpp  packet_mux_benchmark.cpp  packet_strobe.cpp  packet_to_stream.cpp  packet_transmitter.cpp  packet_transmitter_performance.cpp  pdu_specialization.cpp  pdu_to_tagged_stream.cpp  pfb_arb_resampler.cpp  qpsk_modulator.cpp  stop_flowgraph.cpp  syncword_detection.cpp  tagged_stream_to_pdu.cpp  tags.cpp  test_required_samples.cpp  tun.cpp
blocks/packet-modem/include/gnuradio-4.0/packet-modem/: add.hpp  additive_scrambler.hpp  binary_slicer.hpp  burst_shaper.hpp  coarse_frequency_correction.hpp  constellation_llr_decoder.hpp  costas_loop.hpp  crc_append.hpp  crc_check.hpp  file_sink.hpp  file_source.hpp  glfsr_source.hpp  head.hpp  header_fec_decoder.hpp  header_fec_encoder.hpp  header_formatter.hpp  header_parser.hpp  header_payload_split.hpp  interpolating_fir_filter.hpp  item_strobe.hpp  mapper.hpp  message_debug.hpp  message_debug_stream.hpp  message_strobe.hpp  multiply_packet_len_tag.hpp  noise_source.hpp  null_sink.hpp  null_source.hpp  pack_bits.hpp  packet_counter.hpp  packet_ingress.hpp  packet_limiter.hpp  packet_mux.hpp  packet_receiver.hpp  packet_strobe.hpp  packet_to_stream.hpp  packet_transmitter.hpp  packet_transmitter_pdu.hpp  packet_type_filter.hpp  payload_metadata_insert.hpp  (+25 more)
blocks/packet-modem/test/: meson.build  qa_add.cpp  qa_additive_scrambler.cpp  qa_binary_slicer.cpp  qa_burst_shaper.cpp  qa_coarse_frequency_correction.cpp  qa_constellation_llr_decoder.cpp  qa_costas_loop.cpp  qa_crc.cpp  qa_glfsr_source.cpp  qa_head.cpp  qa_header_fec_decoder.cpp  qa_header_fec_encoder.cpp  qa_header_formatter.cpp  qa_header_parser.cpp  qa_header_payload_split.cpp  qa_interpolating_fir_filter.cpp  qa_item_strobe.cpp  qa_loopback.cpp  qa_mapper.cpp  qa_messages.cpp  qa_multiply_packet_len_tag.cpp  qa_noise_source.cpp  qa_null_source_and_sink.cpp  qa_pack_unpack.cpp  qa_packet_ingress.cpp  qa_packet_mux.cpp  qa_packet_strobe.cpp  qa_packet_to_stream.cpp  qa_payload_metadata_insert.cpp  qa_pdu.cpp  qa_pfb_arb_resampler.cpp  qa_probe_rate.cpp  qa_rotator.cpp  qa_stream_to_tagged_stream.cpp  qa_symbol_filter.cpp  qa_syncword_detection.cpp  qa_syncword_detection_filter.cpp  qa_syncword_remove.cpp  qa_syncword_wipeoff.cpp  (+3 more)
blocks/pfb/: CMakeLists.txt
blocks/pfb/test/: CMakeLists.txt
blocks/soapysdr/: CMakeLists.txt
blocks/soapysdr/apps/: CMakeLists.txt
blocks/zeromq/: CMakeLists.txt
blocks/zeromq/examples/: CMakeLists.txt
blocks/zeromq/test/: CMakeLists.txt  meson.build
cmake/: Dependencies.cmake
docker/: Dockerfile
examples/: CMakeLists.txt
subprojects/: ldpc-toolbox.wrap
